# mek-manager

./: .editorconfig  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Makefile  README.md  package.json
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
client/web/: .gitignore  karma.conf.js  package.json  rollup.config.js  tsconfig.json  tslint.json
client/web/src/: index.ts
client/web/src/MekWarrior4/: affiliation.ts  attributes.ts  characterCreationHarness.ts  characterLifeModule.ts  characters.ts  clanCaste.ts  errorMessage.ts  learning.ts  lifeModule.ts  lifeStage.ts  rule.ts  skills.ts  specialRules.ts  traits.ts
client/web/src/MekWarrior4/interfaces/: attributes.ts
client/web/src/MekWarrior4/specs/: attributes.spec.ts  characterCreation.spec.ts  learning.spec.ts  (+3 more)
client/web/src/Utils/: objects.ts
client/www/: .editorconfig  index.html  index.ts  karma.conf.js  package.json  rollup.config.js  tsconfig.json  tsconfig.spec.json  tslint.json
client/www/src/: index.ts
client/www/src/Utils/: collections.ts
client/www/src/testModule/: adder.ts
plugin/: README.md
plugin/names_db/: .dockerignore  CHANGELOG.md  Cargo.toml  Dockerfile
plugin/names_db/data/migrations/: initial_migration.sql
plugin/names_db/data/seeds/: name_api_public_name.sql  name_api_public_sex.sql
plugin/names_db/src/: main.rs  models.rs
plugins/names_db/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
plugins/names_db/data/seeds/: name_api_public_name_set.sql  name_api_public_name_type.sql
plugins/names_db/src/: controllers.rs  db.rs  main.rs
(+28 files in other folders)
